# LR5_Petrov_KN-23-10

./: .gitignore  .replit  main.py  pyproject.toml  pyproject.toml.bak  replit.nix
Other/: requirements.txt
Other/django_project/: settings.py
Other/security_checker/: admin.py  apps.py  security_logic.py  urls.py
Other/security_checker/fixtures/: initial_data.json
Other/security_checker/migrations/: 0001_initial.py
Other/security_checker/templates/security_checker/: index.html
django_project/: urls.py
security_checker/: models.py  views.py
static/: script.js  styles.css
templates/: index.html
