# БЛОК МЕТАДАННЫХ ПРОЕКТА
# Секция конфигурации Poetry, содержащая основные сведения о проекте
[tool.poetry]
# Название проекта — шаблон Python-приложения
name = "python-template"
# Версия проекта
version = "0.1.0"
# Краткое описание проекта (не заполнено)
description = ""
# Сведения об авторе (не заполнены)
authors = ["Your Name <you@example.com>"]

# БЛОК ПРЯМЫХ ЗАВИСИМОСТЕЙ
# Перечень библиотек, необходимых для функционирования приложения
[tool.poetry.dependencies]
# Интерпретатор Python версии 3.10 (не ниже 3.10.0 и не выше 3.11)
python = ">=3.10.0,<3.11"
# Библиотека для работы с многомерными массивами и математическими вычислениями
numpy = "^1.22.2"
# Библиотека для интеграции приложения с платформой Replit
replit = "^3.2.4"
# Микро-веб-фреймворк для создания HTTP-сервера и отдачи веб-страниц
Flask = "^2.2.0"
# HTTP-клиент с поддержкой пула соединений и потоковой безопасности
urllib3 = "^1.26.12"

# БЛОК ЗАВИСИМОСТЕЙ ДЛЯ РАЗРАБОТКИ
# Инструменты, используемые только при разработке и отладке
[tool.poetry.dev-dependencies]
# Отладчик Python, реализующий Debug Adapter Protocol для отладки в среде Replit
debugpy = "^1.6.2"
# Языковой сервер Python с расширениями для форматирования, рефакторинга и анализа кода
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

# БЛОК СБОРКИ ПРОЕКТА
# Конфигурация системы сборки
[build-system]
# Минимальная версия poetry-core, необходимая для сборки
requires = ["poetry-core>=1.0.0"]
# Использование poetry.core.masonry.api в качестве системы сборки
build-backend = "poetry.core.masonry.api"